@@ -1,9 +1,0 @@
-INSERT INTO `UserAccount` (`user_id`, `user_name`, `user_password_hash`, `user_realname`)
-VALUES (1,'admin',sha1(
-
-# Uncomment and change the next line to your password, e.g.:
-# 'mysecretpassword'
-# ... and comment out the line below:
-PLEASE_READ_THE_INSTALL_DOCUMENTATION
-
-),'RackTables Administrator');
